--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Praktikum_02
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.20.jar=D:\\jar_files\\mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.20.jar-1=C:\\Users\\DELL\\Downloads\\jar_files\\mysql-connector-java-8.0.20.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
